Fix desktop hero area overflow bug. Install Swiper.

--- a/src/stylesheets/Style.scss
+++ b/src/stylesheets/Style.scss
@@ -3,14 +3,14 @@
 
 h1 {
   font-family: 'Crimson Text', serif;
-  font-size: 48px;
+  font-size: calc(48px + 1vw);
   letter-spacing: 0;
   line-height: 48px;
 }
 
 h2 {
   font-family: 'Crimson Text', serif;
-  font-size: 18px;
+  font-size: calc(18px + 0.5vw);
   letter-spacing: 0;
   line-height: 24px;
 }
